ToolStep/MicroServiceBasic/MicroCode/K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-src
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: acme.com
    http:
      paths:
        - pathType: Prefix
          path: /api/platforms
          backend:
            service:
              name: platforms-clusterip-src
              port: 
                number: 80
        - pathType: Prefix
          path: /api/c/platforms
          backend:
            service:
              name: commands-clusterip-src
              port: 
                number: 80
